# quant

./: .gitignore  CLAUDE.md  README.md  aggregate.py  demo_live.py  pyproject.toml  scan_markets.py  setup.py
Swarm_Intelligence/: README.md  WORKFLOW.md  fish_helper.py
Swarm_Intelligence/fish_bayesian/: CLAUDE.md
Swarm_Intelligence/fish_calibrator/: CLAUDE.md
Swarm_Intelligence/fish_contrarian/: CLAUDE.md
Swarm_Intelligence/fish_domain_expert/: CLAUDE.md
Swarm_Intelligence/fish_geopolitical/: CLAUDE.md
Swarm_Intelligence/fish_journalist/: CLAUDE.md
Swarm_Intelligence/fish_quant/: CLAUDE.md
Swarm_Intelligence/fish_researcher/: CLAUDE.md
config/: default.yaml
data/scans/: scan_20260412_223936.json
docs/: DEVELOPERS_NOTE.md  FUTURE_WORKS.md  GLOSSARY.md  Literature_Review_Multi_Agent_LLM_Prediction_Markets.docx  Literature_Review_Multi_Agent_LLM_Prediction_Markets.md  MATHEMATICAL_FOUNDATIONS.md  SWARM_PROTOCOL.md  TECHNICAL_DETAILS.md  USER_MANUAL.md  generate_pipeline_diagram.py
docs/architecture/: system_design.md
docs/worksheets/: create_worksheet.py  mirofish_human_worksheet.docx
examples/: README.md
examples/001_us_election_2028/: README.md  consensus.json  exercise_001_report.docx  generate_report.py
examples/002_crypto_markets/: README.md  consensus.json
examples/003_geopolitics/: README.md  consensus.json
examples/004_mixed_portfolio/: README.md  consensus.json
literature_review/: README.md  annotated_bibliography.md
scripts/: daily_report.sh  start_paper_trading.sh  weekly_review.sh
shared_state/: README.md
src/: __init__.py
src/db/: __init__.py  manager.py  schema.sql
src/execution/: __init__.py  live_loop.py  order_types.py  polymarket_executor.py  position_manager.py
src/markets/: __init__.py  dataset.py  history.py  polymarket.py  scanner.py
src/mirofish/: __init__.py  engine.py  engine_v4.py  fish.py  god_node.py  ipc.py  live_pipeline.py  llm_fish.py  message_bus.py  news_context.py  researcher.py  swarm.py  swarm_router.py
src/network/: __init__.py  market_graph.py
src/prediction/: __init__.py  advanced_scoring.py  ai_bias_detector.py  batch_retrodiction.py  calibration.py  retrodiction.py  retrodiction_pipeline.py  run_retrodiction.py  volatility.py
src/reporting/: __init__.py  alerts.py  dashboard.py
src/risk/: __init__.py  analytics.py  arbitrage.py  kelly.py  portfolio.py  threshold_optimizer.py
src/semantic/: __init__.py  analyzer.py  news_extractor.py
src/utils/: cli.py  config.py  logging.py  (+1 more)
tests/: conftest.py
(+13 files in other folders)
